<resources>
    <string name="app_name">FypAdmin</string>


    <string name="mLogin">Login</string>
    <string name="mEmailHint">Email</string>
    <string name="forgetPass">Click here to Reset</string>
    <string name="noAccount">Don\'t Have an Account?</string>
    <string name="signup_now">Signup Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="adminMail">ammarishfaq25@gmail.com</string>
    <string name="DONOR">DONOR</string>
    <string name="NGO">NGO</string>
    <string name="info">info</string>
    <string name="user_location_permission_not_granted">"Please Enable Location Permission "</string>
    <string name="user_location_permission_explanation">Location Permission is Required For Selection of Location</string>

</resources>